# segway_v3

segway_description/launch/: description.launch
segway_description/urdf/: accessories.urdf.xacro
segway_description/urdf/RMP_440LE/: rmp.urdf.xacro
segway_msgs/: CMakeLists.txt
segway_msgs/msg/: Configuration.msg  SuperAux.msg
segway_navigation/segway_assisted_teleop/: CHANGELOG.rst  CMakeLists.txt
segway_navigation/segway_assisted_teleop/include/segway_assisted_teleop/: segway_assisted_teleop.h
segway_navigation/segway_assisted_teleop/src/: segway_assisted_teleop.cpp
segway_navigation/segway_navigation_apps/config/RMP_110/: amcl.yaml
segway_ros/cfg/: segway.cfg
segway_ros/launch/: segway_startup.launch
segway_ros/src/segway/: move_base.py  segway_comm.py  segway_control_marker.py  segway_data_classes.py  segway_system_wd.py  segway_teleop.py  si_super_aux.py  system_defines.py  utils.py
segway_v3_config/: segway_config.bash
si_utils/launch/: subtest.launch  test_launch.launch
si_utils/scripts/: display_off  ext_imu_to_lsm  gripper_action_test.py  install_ds4_dep  install_swiftnav  kinova_jtas_test.py  kinova_moveit_test  laserscan_to_pcl2  network_bridge_config  reset_odometry  segway_fog_odometry  segway_imu_transform  segway_sim_odometry  test_launch.py
